syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Booking.API.GrpcServer.Protos";

service BookingGrpcService{
	rpc CreateBookingRoom (CreateBookingRoomRequest) returns (BookingRoomResponse);
	rpc DeleteBookingRoom (DeleteBookingRoomRequest) returns (DeleteBookingRoomResponse);
	rpc CheckRoomsIsBooked (CheckRoomsIsBookedRequest) returns (CheckRoomsIsBookedResponse);
	rpc CreateBookingTour (CreateBookingTourRequest) returns (BookingTourResponse);
	rpc DeleteBookingTour (DeleteBookingTourRequest) returns (DeleteBookingTourResponse);
}
// Booking room
message CreateBookingRoomRequest{
	int32 UserId = 1;
	repeated BookingRoomDetailRequest BookingRoomDetails = 2;
    google.protobuf.Timestamp CheckIn = 3;
    google.protobuf.Timestamp CheckOut = 4;
	string Status = 5;
}
message BookingRoomDetailRequest{
	int32 RoomId = 1;
	int32 Adult = 2;
	int32 Children = 3;
	double Price = 4;
}	

message BookingRoomResponse {
	int32 BookingRoomId = 1;
}

message DeleteBookingRoomRequest{
	int32 BookingRoomId = 1 ;
}
message DeleteBookingRoomResponse{
    bool Result = 1;
}
message CheckRoomsIsBookedRequest{
	repeated int32 RoomIds = 1;
    google.protobuf.Timestamp CheckIn = 2;
    google.protobuf.Timestamp CheckOut = 3;
}
message CheckRoomsIsBookedResponse{
	bool Result = 1;
	string Message = 2;
}
// Booking tour
message CreateBookingTourRequest{
	int32 UserId = 1;
	int32 ScheduleId = 2;
	int32 Seats = 3;
	bool IsLunch = 4;
	bool IsTip = 5 ;
	bool IsEntranceTicket = 6;
	string Status = 7;
	double PriceTotal = 8;
	repeated TravellerDetail TravellerDetail = 11;
}

message TourBookingRoomDetail{
	int32 RoomId = 1;
	int32 Adult = 2;
	int32 Children = 3;
	double Price = 4;
}

message TravellerDetail {
	string Gender = 1;
	string FullName = 2;
	int32 Age = 3;
	string Phone = 4;
}
message BookingTourResponse{
	int32 BookingTourId = 1; 
}
message DeleteBookingTourRequest{
	int32 BookingTourId = 1 ;
}
message DeleteBookingTourResponse{
    bool Result = 1;
}

